# py3xui

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  create_venv.sh  demo.py  dev_requirements.txt  inbound.json  pydoc.sh  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: py3xui-issue-template.md
.github/workflows/: check_with_mypy.yml  check_with_pylint.yml  check_with_pytest.yml  checks.yml  checkspr.yml  issues.yml  pypi.yml  stale.yml
dev/: clean_trash.sh  create_venv.sh  push.sh  pydoc.sh  requirements.txt
py3xui/: __init__.py
py3xui/api/: README.md  __init__.py  api.py  api_base.py  api_client.py  api_database.py  api_inbound.py  api_server.py
py3xui/async_api/: README.md  __init__.py  async_api.py  async_api_base.py  async_api_client.py  async_api_database.py  async_api_inbound.py  async_api_server.py
py3xui/client/: README.md  __init__.py  client.py
py3xui/clients/: client.py  client_stats.py
py3xui/inbound/: README.md  __init__.py  bases.py  inbound.py  settings.py  sniffing.py  stream_settings.py
py3xui/inbounds/: bases.py  inbounds.py  settings.py  sniffing.py  stream_settings.py
py3xui/server/: README.md  __init__.py  server.py
py3xui/utils/: README.md  __init__.py  endpoints.py  env.py  logger.py
tests/: test_api.py  test_async_api.py  test_env.py
tests/responses/: get_client.json  get_client_traffic_by_id.json  get_inbound_by_id.json  get_inbounds.json  get_server_status.json
