[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py3xui"
version = "0.2.3"
description = "Sync and Async Object-oriented Python SDK for the 3x-ui app."
authors = [{name = "iwatkot", email = "iwatkot@gmail.com"}]
license = {text = "MIT License"}
readme = "README.md"
keywords = ["vpn", "3x-ui", "sdk", "api"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0.0",
    "requests>=2.0.0",
    "httpx>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/iwatkot/py3xui"
Repository = "https://github.com/iwatkot/py3xui"

[tool.setuptools.packages.find]
where = ["."]
include = ["py3xui*"]
exclude = ["dev*"]
